--- a/main.tex
+++ b/main.tex
@@ -364,9 +364,6 @@ Other assumptions that if changed, requirements may need to be updated:
 	\item VP5 Car Dealerships
 \end{itemize}
 
-\noindent {\bf Interpretation:} Specify any liberties you took in interpreting business events, if necessary. \\
-N/A
-
 \begin{enumerate}[{\bf {BE}1.}]
 
     \item Request a deal valuation based on drop down menu input \\    
@@ -575,9 +572,9 @@ N/A
 		\end{enumerate}
     
         \item Customer Support (DealCheck) \#2 \\
-            \textbf{7i.} System should notify users when expert analysis is unavailable and recommend retrying later.
+            7i. System should notify users when expert analysis is unavailable and recommend retrying later.
         \item Marketing (DealCheck) \#3 \\
-            \textbf{9i.} System should suggest similar vehicles with better historical prices.
+            9i. System should suggest similar vehicles with better historical prices.
         \item Car Manufacturers \#4 \\
             NA
         \item Car dealership staff \#5 \\
@@ -1768,7 +1765,7 @@ Include a Division of Labour sheet which indicates the contributions of each tea
     \item \textbf{{Business Event 6:}} User requests a comparison between two or more car deals
     \item \textbf{{Business Event 7:}} User requests a car recommendation based on text information provided 
     \begin{center}
-        \includegraphics[scale=2]{Images/omer.jpg}
+        \includegraphics[scale=0.1]{Images/omer.jpg}
     \end{center}
 \end{itemize}
 
