Update main.tex to include system diagram

--- a/main.tex
+++ b/main.tex
@@ -178,6 +178,12 @@ market data. Users will also be able to view their existing reports and query hi
 
 \noindent In terms of external interactions, this application will consult with an external large-language model (for example, ChatGPT) in order to source recommendations. 
 Additionally, it will consult, via API, an existing database of car price records to show users historical pricing for the vehicle they are considering.
+
+\begin{figure}[htb!]
+	\centering
+	\includegraphics[scale=0.5]{Images/system_block_diagram.png}
+	\caption{Block Diagram of the System}\label{Fig:2.1}
+\end{figure}
 % End SubSection
 
 \subsection{Product Functions}
